# Vaultcore

./: .gitignore  BENCHMARKS.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.claude/agents/: aristotle.md  socrates.md  vitruvius.md
.github/scripts/: minerva_build_review.py
.github/workflows/: build.yml  minerva-review.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: MOBILE_BUILD.md
e2e/: README.md  tsconfig.json
e2e/helpers/: open-vault.ts  text.ts  vault.ts
e2e/specs/: ascii-aesthetic.spec.ts  backlinks-panel.spec.ts  block-references.spec.ts  bookmarks.spec.ts  bottom-tab-bar.spec.ts  canvas-a11y.spec.ts  canvas-context-menus.spec.ts  canvas-edges.spec.ts  canvas-embed-fit-contain.spec.ts  canvas-embed-live-refresh.spec.ts  canvas-embed-refresh.spec.ts  canvas-embedded.spec.ts  canvas-file-refs.spec.ts  canvas-group-movement.spec.ts  canvas-wiki-embed.spec.ts  canvas.spec.ts  command-palette.spec.ts  css-snippets.spec.ts  daily-notes.spec.ts  delete.spec.ts  drag-drop.spec.ts  editor-context-menu.spec.ts  editor-sidebar-drop.spec.ts  embeds.spec.ts  encrypted-folders.spec.ts  error-handling.spec.ts  export.spec.ts  find-shortcut.spec.ts  gfm-tables.spec.ts  graph-forces.spec.ts  graph-tab.spec.ts  hotkeys.spec.ts  hybrid-search.spec.ts  image-preview.spec.ts  index-repair.spec.ts  indexing-progress.spec.ts  inline-rename.spec.ts  local-graph.spec.ts  mobile-burger.spec.ts  mobile-layout.spec.ts  (+30 more)
scripts/: bench-regression.py  run-benchmarks.sh
src/: App.svelte  main.ts
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.uat-b.json
src-tauri/benches/: baseline.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitignore  DOCS.template.md  LICENSE-MIT  checksums.toml
src-tauri/src/: error.rs  hash.rs  lib.rs  main.rs  merge.rs  watcher.rs
src-tauri/src/commands/: bookmarks.rs  embedding_graph.rs  embedding_graph_stub.rs  encryption.rs  export.rs  files.rs  index_dispatch.rs  links.rs  mod.rs  picker.rs  search.rs  snippets.rs  sync.rs  sync_cmds.rs  sync_cmds_pairing_tests.rs  tags.rs  templates.rs  tree.rs  vault.rs
src-tauri/src/default_templates/: Book Notes.md  Bug Report.md  Daily Journal.md  Meeting Notes.md  Project Brief.md  Weekly Review.md
src-tauri/src/embeddings/: chunking.rs  embed_coordinator.rs  hybrid.rs  mod.rs  query.rs  reindex.rs  release.rs  service.rs  session.rs  sink.rs  vector_index.rs
src-tauri/src/encryption/: batch.rs  crypto.rs  drop_encrypt.rs  file_format.rs  manifest.rs  mod.rs  pending_queue.rs  registry.rs
src-tauri/src/indexer/: anchor_index.rs  anchors.rs  frontmatter.rs  link_graph.rs  memory.rs  mod.rs  parser.rs  tag_index.rs  tantivy_index.rs
src-tauri/src/storage/: android.rs  handle.rs  mock.rs  mod.rs  permission.rs  posix.rs
src-tauri/src/sync/: capability.rs  clock.rs  conflict.rs  discovery.rs  engine.rs  history.rs  identity.rs  merkle.rs  mod.rs  pairing.rs  pairing_engine.rs  protocol.rs  state.rs  tombstone.rs  transport.rs  vault_id.rs
src-tauri/src/sync/tests/: conflict_tests.rs  discovery_tests.rs  engine_tests.rs  identity_tests.rs  merkle_tests.rs  mod.rs  pairing_engine_tests.rs  pairing_tests.rs  state_tests.rs  transport_tests.rs
src-tauri/src/tests/: aliases.rs  bookmarks.rs  docs_page.rs  embedding_graph.rs  embedding_release.rs  embeddings.rs  encryption_gating.rs  error_serialize.rs  export_decrypted.rs  file_index_contention.rs  files.rs  files_ops.rs  global_graph.rs  hash_verify.rs  home_canvas.rs  indexer.rs  indexer_single_read.rs  legacy_semantic_cleanup.rs  link_graph.rs  local_graph.rs  merge.rs  merge_external_change.rs  mod.rs  picker.rs  rename_link_resolution.rs  semantic_quality.rs  snippets.rs  storage_mock.rs  storage_posix.rs  storage_validate_rel.rs  tag_index.rs  tree.rs  vault_handle.rs  vault_stats.rs  vault_walk.rs  watcher.rs
src-tauri/tests/: sync_e2e.rs
src-tauri/tests/fixtures/semantic_quality/: bread_baking.md  cat_behavior.md  hund_verhalten.md  machine_learning.md  maschinelles_lernen_de.md  pizza_dough.md  pizza_teig_de.md  sourdough_starter.md
src/ipc/: commands.ts  events.ts
src/lib/: activeTabReveal.ts  dailyNotes.ts  docsPage.ts  exportHtml.ts  flattenTree.ts  frontmatterIO.ts  headingSlug.ts  headings.ts  homeCanvas.ts  morphTypes.ts  noteContentCache.ts  openFileAsTab.ts  outgoingLinks.ts  passwordStrength.ts  queryCollection.ts  relativeTime.ts  shortcuts.ts  tabKind.ts  templateCompletion.ts  templateExprRanges.ts  templateExprRegex.ts  templateExpression.ts  templateExpressionBuilder.ts  templateProgram.ts  templateScope.ts  templateSubstitution.ts  treeState.ts  vaultApi.ts  vaultApiDescriptor.ts  vaultApiStoreBridge.ts  vaultPath.ts  viewport.ts  wordCount.ts
src/store/: activeViewStore.ts  autoLockStore.ts  backlinksStore.ts  bookmarksStore.ts  countsStore.ts  editorStore.ts  encryptedFoldersStore.ts  encryptionModalStore.ts  encryptionProgressStore.ts  pairingModalStore.ts  progressStore.ts  reindexStore.ts  resolvedLinksStore.ts  scrollStore.ts  searchStore.ts  settingsModalStore.ts  settingsStore.ts  snippetsStore.ts  staleResurrectToasts.ts  syncStore.ts  tabLayoutStore.test.ts  tabLayoutStore.ts  tabLifecycleStore.test.ts  tabLifecycleStore.ts  tabReloadStore.test.ts  tabReloadStore.ts  tabStore.test.ts  tabStore.ts  tabStoreCore.ts  tagsStore.ts  themeStore.ts  toastStore.ts  treeRefreshStore.ts  treeRevealStore.ts  vaultStore.ts  viewportStore.ts
src/styles/: tailwind.css
src/test/: setup.ts
src/types/: build.d.ts  tags.ts  (+8 more)
test-fixtures/: slug_parity.json  template_expr_parity.json
tests/: Breadcrumbs.test.ts  SearchResultRow.test.ts  Toast.test.ts  VaultLayout.noThrowawaySubs.test.ts  WelcomeScreen.test.ts  asciiAestheticSelectors.test.ts  autoSave.test.ts  canvasRendererA11y.test.ts  fontsource.eagerCount.test.ts  indexProgress.test.ts  keymap.test.ts  parsedLinkType.test.ts  vault.test.ts
(+402 files in other folders)
