[package]
name = "vaultcore"
version = "0.1.0"
description = "VaultCore — a local, Markdown-first knowledge-management desktop app"
authors = ["VaultCore"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vaultcore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
# Used by build.rs to fetch + verify the bundled libonnxruntime (#191) and
# MiniLM model (#192). Kept lean: blocking ureq, manual TOML parse, sha2,
# flate2/tar for .tgz, zip for Windows .zip.
ureq = { version = "2", features = ["tls"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
fs2 = "0.4"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
walkdir = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
log = "0.4"
env_logger = "0.11"
notify-debouncer-full = "0.7"
similar = "3.1"
rayon = "1"
regex = "1"
tantivy = "0.26"
nucleo-matcher = "0.3"
pulldown-cmark = "0.13"
serde_yml = "0.0.12"
base64 = "0.22"

# #345: per-folder encryption at rest. Pure-Rust primitives so the
# bundle stays offline/zero-network and builds on all three targets
# without system crypto libs.
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

# Embeddings stack — gated behind `embeddings` feature.
# `ort` with the `load-dynamic` feature dlopen's libonnxruntime at runtime
# from a Tauri-bundled resource (#191) instead of linking statically.
# Default features are disabled to suppress the binary downloader
# (`ort-download-binaries-native-tls`) and unused candle backends.
# #205: SessionBuilder is used directly — no fastembed wrapper — so we can
# set `memory_pattern=false` and opt into an env-level CPU arena allocator
# with `arena_extend_strategy=kSameAsRequested`.
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic", "ndarray"], optional = true }
ort-sys = { version = "=2.0.0-rc.11", optional = true }
# ndarray is used to build `[batch, seq]` i64 tensors for MiniLM inputs.
# Version pinned to ort's requirement so cargo unifies on one copy.
ndarray = { version = "0.17", optional = true }
# Used by the embedding chunker (#195) to split notes into overlapping
# ≤256-token windows, and by `EmbeddingService` (#205) to tokenize queries
# directly without the fastembed wrapper.
tokenizers = { version = "0.22", default-features = false, features = ["onig"], optional = true }
hnsw_rs = { version = "0.3.4", optional = true, features = ["simdeez_f"] }

[features]
default = ["embeddings"]
embeddings = ["dep:ort", "dep:ort-sys", "dep:ndarray", "dep:tokenizers", "dep:hnsw_rs"]

[dev-dependencies]
tempfile = "3"
# Enable `tauri::test::mock_app()` so unit tests can feed a dummy AppHandle
# into functions that emit vault:// events (e.g. IndexCoordinator::index_vault).
tauri = { version = "2", features = ["test"] }
