[package]
name = "vaultcore"
version = "0.1.0"
description = "VaultCore — a local, Markdown-first knowledge-management desktop app"
authors = ["VaultCore"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vaultcore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
walkdir = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
log = "0.4"
env_logger = "0.11"
notify-debouncer-full = "0.7"
similar = "3.1"
rayon = "1"
regex = "1"
tantivy = "0.26"
nucleo-matcher = "0.3"
pulldown-cmark = "0.13"
serde_yml = "0.0.12"
base64 = "0.22"

# #345: per-folder encryption at rest. Pure-Rust primitives so the
# bundle stays offline/zero-network and builds on all three targets
# without system crypto libs.
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
# Enable `tauri::test::mock_app()` so unit tests can feed a dummy AppHandle
# into functions that emit vault:// events (e.g. IndexCoordinator::index_vault).
tauri = { version = "2", features = ["test"] }
