[package]
name = "vaultcore"
version = "0.1.0"
description = "VaultCore — a local, Markdown-first knowledge-management desktop app"
authors = ["VaultCore"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vaultcore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
walkdir = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
log = "0.4"
env_logger = "0.11"
notify-debouncer-full = "0.7"
similar = "3.1"
rayon = "1"
regex = "1"
tantivy = "0.26"
nucleo-matcher = "0.3"
pulldown-cmark = "0.13"
serde_yml = "0.0.12"
base64 = "0.22"

# #345: per-folder encryption at rest. Pure-Rust primitives so the
# bundle stays offline/zero-network and builds on all three targets
# without system crypto libs.
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

# #416: sync-state metadata store. `bundled` ships SQLite with the binary
# so target machines need no system sqlite, matching the "zero external
# deps" stance for the offline P2P sync stack.
rusqlite = { version = "0.32", features = ["bundled"] }
# Compact binary serialization for version vectors stored as BLOBs in
# sync_files / sync_history. Pinned to 1.x — bincode 2 changed the API.
bincode = "1"

# #417: identity + discovery.
# Ed25519 signing — used for device keys and (later) capability tokens.
ed25519-dalek = { version = "2", features = ["rand_core"] }
# Pure-Rust mDNS for `_vaultcore._tcp.local.` advertise + browse.
mdns-sd = "0.13"
# Cross-platform OS keychain (Keychain / CredMgr / Secret Service).
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
# Default device name = OS hostname.
hostname = "0.4"
# Per-vault UUIDv4 written to `.vaultcore/vault-id`.
uuid = { version = "1", features = ["v4"] }
# RFC4648 base32 encoding for `device_id = base32(SHA-256(pubkey)[..16])`.
data-encoding = "2"
# Cryptographic RNG for ed25519-dalek 2.x keygen (OsRng implements RngCore).
rand_core = { version = "0.6", features = ["getrandom"] }

# #418: PAKE pairing.
# CPace (libsodium-author Frank Denis / jedisct1) — spec PASSED 2026-05-03.
pake-cpace = "0.1.7"
# RFC 2104 HMAC-SHA256 for the post-PAKE key-confirmation step (A2
# design note: PAKE itself does NOT error on wrong PIN — keys silently
# diverge — so an explicit MAC exchange is required).
hmac = "0.12"

# #419: Noise IK transport.
# `snow` implements the Noise Protocol Framework — XX bootstrap on
# first sync (mutual key verification), then IK steady-state for
# subsequent syncs (recipient's static key already known). Pure Rust,
# no system deps.
snow = "0.9"

[dev-dependencies]
tempfile = "3"
# Enable `tauri::test::mock_app()` so unit tests can feed a dummy AppHandle
# into functions that emit vault:// events (e.g. IndexCoordinator::index_vault).
tauri = { version = "2", features = ["test"] }
